portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.6-11.build.log
15:15:18 **** Build of configuration Debug for project ex.6-11 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.6-11.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.6-11.d" -MT"ex.6-11.o" -o "ex.6-11.o" "../ex.6-11.cpp"
../ex.6-11.cpp:12:19: error: C++ requires a type specifier for all declarations
int swap(int &x, &y)
                  ^
1 error generated.
make: *** [ex.6-11.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:15:18 Build Failed. 2 errors, 0 warnings. (took 834ms)

